<?xml version="1.0"?>
<package format="2">
  <name>rrt</name>
  <version>0.0.0</version>
  <description>The rrt package</description>

  <maintainer email="enrico@todo.todo">enrico</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>map_server</exec_depend>

</package>
